--- a/parse-dashboard-config.json
+++ b/parse-dashboard-config.json
@@ -4,7 +4,7 @@
       "serverURL": "http://localhost:1337/parse",
       "appId": "myAppId",
       "masterKey": "myMasterKey",
-      "appName": "MyApp"
+      "appName": "Photogram"
     }
   ]
 }
